--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,11 @@ url: "mindstraem.today" # the base hostname & protocol for your site, e.g. http:
 twitter_username: jekyllrb
 github_username:  jekyll
 
+languages: ["en", "ru"]
+default_lang: "en"
+exclude_from_localization: ["javascript", "images", "css"]
+parallel_localization: true
+
 # Build settings
 markdown: kramdown
 theme: minima
