--- a/jbake.properties
+++ b/jbake.properties
@@ -1,3 +1,4 @@
-site.host=http://jbake.org
-render.tags=false
+site.host=https://mindstream.today
+render.tags=true
 render.sitemap=true
+destination.folder=/docs
